[package]
name = "nanofrann"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
rand = "0.9.0-alpha.2"
kiddo = "4.2.0"
kd-tree = "0.6.0"
num-traits = "0.2.19"

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = 3

