[package]
name = "nanofrann"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
rand = "0.9.0-alpha.2"
kiddo = "4.2.0"
kd-tree = "0.6.0"
num-traits = "0.2.19"
num = "0.4.3"
ply-rs = "0.1.3"
criterion = "0.5.1"

[profile.release-with-debug]
inherits = "release"
debug = true


[[bench]]
name = "construction"
harness = false

